--- a/graph_nerve_recording.ipynb
+++ b/graph_nerve_recording.ipynb
@@ -337,36 +337,30 @@
         "\n",
         "class Augmentation_layer1(tf.keras.layers.Layer):\n",
         "    def __init__(self, N, M):\n",
-        "        super(Augmentation_layer1,self).__init__()\n",
+        "        super(Augmentation_layer1, self).__init__()\n",
         "        self.M = M\n",
         "        self.N = N\n",
         "\n",
         "    def Trans(self, image, count):\n",
-        "        image = tf.reshape(image, (image.shape[0], image.shape[1], -1)) #\n",
-        "        image = tf.stack([image, image, image], axis = -1)\n",
+        "        image = tf.reshape(image, (image.shape[0], image.shape[1], -1))\n",
+        "        image = tf.stack([image, image, image], axis=-1)\n",
         "        image = tf.convert_to_tensor(image)\n",
-        "        image = tf.where(count==0, tf.image.random_brightness(image, max_delta=self.N/20), image)\n",
-        "        image = tf.where(count==1,  tf.image.random_contrast(image, lower=1.0-self.N/20, upper=1.0 + self.N/20), image)\n",
-        "        image = tf.where(count==2, tf.image.random_saturation(image, lower=1.2-self.N/20, upper=1.2+self.N/20), image)\n",
-        "        image = tf.where(count==3, tf.image.random_hue(image, max_delta=(self.N+2)/25), image)\n",
-        "        image = tf.where(count==4, gaussian_blur(image, tf.cast(tf.random.uniform([], 3, 3), tf.int32), self.N/20), image)\n",
-        "        G = tf.random.uniform(shape=[], minval = 0, maxval = 0.1,dtype=tf.float32)\n",
-        "        image = tf.where(count==5, tf.keras.layers.GaussianNoise(G)(image), image)\n",
-        "        Coef = tf.random.uniform(shape=[], minval = 0, maxval = 2,dtype=tf.float32)\n",
-        "        image = tf.where(count==6, image*Coef, image)\n",
-        "        image = image[:,:,:,0]\n",
+        "\n",
+        "        G = tf.random.uniform(shape=[], minval=0, maxval=0.1, dtype=tf.float32) #Gaussian noise\n",
+        "        image = tf.keras.layers.GaussianNoise(G)(image)\n",
+        "\n",
+        "        image = image[:, :, :, 0]\n",
         "        return image\n",
         "\n",
         "    def call(self, image, training):\n",
-        "        image = tf.cast(image, dtype = tf.float32)\n",
-        "        MM = tf.cast(self.M, dtype = tf.int32)\n",
-        "        Perm = tf.random.uniform(shape=[MM], maxval=6, dtype=tf.int32)\n",
-        "        Perm = tf.random.shuffle(Perm)\n",
+        "        image = tf.cast(image, dtype=tf.float32)\n",
+        "\n",
         "        if training:\n",
-        "            for count in Perm:\n",
-        "               image = self.Trans(image, count)\n",
-        "        image = tf.cast(image, dtype = tf.float32)\n",
-        "        return image\n",
+        "            for _ in range(self.M):\n",
+        "                image = self.Trans(image, None)\n",
+        "\n",
+        "        return tf.cast(image, dtype=tf.float32)\n",
+        "\n",
         "\n",
         "\n",
         "\n",
